manifests/webhook/webhook-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcpdump-webhook
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: tcpdump-webhook
  template:
    metadata:
      labels:
        component: tcpdump-webhook
    spec:
      containers:
        - name: tcpdump-ws
          image: webhook:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8443
          volumeMounts:
            - name: ssl-tcpdump-webhook
              mountPath: /ssl
      volumes:
        - name: ssl-tcpdump-webhook
          configMap:
            name: ssl-tcpdump-webhook
---

kind: Service
apiVersion: v1
metadata:
  namespace: default
  name: tcpdump-webhook
spec:
  selector:
    component: tcpdump-webhook
  ports:
    - name: http
      port: 443
      targetPort: 8443
